# FloatingDictionaryLinux

./: .gitignore  Cargo.toml  README.md  flake.nix  requirement.txt
src/: app.rs  main.rs  ocr.rs  translation.rs
