[package]
name = "floating-dictionary-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
zbus = "5"
rand = { version = "0.9.2" }
futures-util = "0.3"
urlencoding = "2.1.3"
tesseract = "0.15"
eframe = "0.28.1"
arboard = "3.4.0"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.20"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
